--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="GoCleanYourComputer.MainWindow"
+﻿
+<Window x:Class="GoCleanYourComputer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,13 +7,27 @@
         xmlns:local="clr-namespace:GoCleanYourComputer"
         mc:Ignorable="d"
         Title="GoCleanYourComputer" Height="800" Width="600">
-    <Grid>
-        <StackPanel>
+    <Window.Resources>
+        <Style TargetType="Button">
+        <Setter Property="BorderThickness" Value="5" />
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="BorderBrush" >
+            <Setter.Value>
+                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                    <GradientStop Color="Yellow" Offset="0.0" />
+                    <GradientStop Color="Red" Offset="0.25" />
+                    <GradientStop Color="Blue" Offset="0.75" />
+                    <GradientStop Color="LimeGreen" Offset="1.0" />
+                </LinearGradientBrush>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    </Window.Resources>
+    <StackPanel>
         <TextBox x:Name="TextBox1" Width="200px" Height="50px" HorizontalAlignment="Center" VerticalAlignment="Top">Hello World!</TextBox>
         <Button x:Name="SysinfoButton" Width="200px" Height="50px" VerticalAlignment="Center" HorizontalAlignment="Center" Click="SysinfoButton_Click">Get System Info</Button>
         <Button x:Name="RMTempFilesButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="RMTempFiles_Click">Remove Temporary Files</Button>
         <Button x:Name="CleanDriveButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="CleanDrive_Click">Clean Windows Files</Button>
         <Button x:Name="DefragButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="Defrag_Click">Defragment Hard Drives</Button>
         </StackPanel>
-    </Grid>
 </Window>
