Cleaned up code a bit

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -25,11 +25,11 @@
         <TextBlock x:Name="HeaderSubText" Height="50px" HorizontalAlignment="Center" VerticalAlignment="Top" TextAlignment="center" FontFamily="Jetbrains Mono" FontSize="12">A simple computer cleaning tool.</TextBlock>
         <TextBlock x:Name="InfoBox" HorizontalAlignment="Center" VerticalAlignment="Top" TextAlignment="center" FontFamily="Jetbrains Mono" FontSize="12">No actions running right now.</TextBlock>
         <Button x:Name="SysinfoButton" Width="200px" Height="50px" VerticalAlignment="Center" HorizontalAlignment="Center" Click="SysinfoButton_Click">Get System Info</Button>
-        <Button x:Name="RMTempFilesButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="RMTempFiles_Click">Remove Temporary Files</Button>
+        <Button x:Name="RmTempFilesButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="RMTempFiles_Click">Remove Temporary Files</Button>
         <Button x:Name="CleanDriveButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="CleanDrive_Click">Clean Windows Files</Button>
         <Button x:Name="DefragButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="Defrag_Click">Defragment Hard Drives</Button>
-        <Button x:Name="RMOneDriveButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="RMOneDrive_Click">Remove Microsoft OneDrive</Button>
-        <Button x:Name="RMWidgetsButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="RMWidgets_Click">Remove Widgets</Button>
+        <Button x:Name="RmOneDriveButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="RMOneDrive_Click">Remove Microsoft OneDrive</Button>
+        <Button x:Name="RmWidgetsButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="RMWidgets_Click">Remove Widgets</Button>
         <Button x:Name="NoBingSearchButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="NoBingSearch_Click">Disable Bing Search Results</Button>
         <Button x:Name="FixBootloaderResButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="FixBootloaderRes_Click">Fix Bootloader Distortion</Button>
         <Button x:Name="DisableTelemetryButton" Width="200px" Height="50px" VerticalAlignment="Top" HorizontalAlignment="Center" Click="DisableTelemetry_Click">Disable Invasive Telemetry</Button>
